2003-05-01  Brian Warner  <warner@lothar.com>

	* twisted/test/test_trial.py: handle new trial layout
	* twisted/trial/runner.py (runTest): utility function to help
	test_trial
	* twisted/trial/util.py (extract_tb): handle new trial layout,
	ignore the right framework functions.

2003-05-01  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/python/context.py: call-stack context tree.

	* twisted/python/components.py: support interface-to-interface
	adapatation, IFoo(o) syntax for adaptation, context-based
	registries and more.

	* twisted/python/log.py: Totally rewritten logging system.

2003-05-01  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py (Gtk2Reactor._doReadOrWrite):
	add Anthony's cached-Failure speedup to gtk2 too.

2003-05-01  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/tcp.py, twisted/internet/default.py: cache
	Failures whose contents are always identical. Speeds up lost
	connections considerably.

	* twisted/python/failure.py: If you pass only an exception object
	to Failure(), a stack will not be constructed. Speeds up Failure
	creation in certain common cases where traceback printing isn't
	required.

2003-04-29  Brian Warner  <warner@lothar.com>

	* twisted/test/test_process.py: make all child processes inherit
	their parent's environment

	* twisted/web/resource.py, twisted/python/roots.py: add
	test-case-name tag

	* twisted/web/resource.py (IResource)
	  twisted/spread/refpath.py (PathReferenceAcquisitionContext.getIndex)
	  twisted/python/roots.py (Collection.getEntity): appease pychecker

2003-04-27  Jp Calderone  <exarkun@twistedmatrix.com>

	* doc/examples/bananabench.py, twisted/internet/utils.py,
	twisted/mail/bounce.py, twisted/persisted/styles.py,
	twisted/python/log.py, twisted/python/reflect.py,
	twisted/spread/pb.py, twisted/test/test_banana.py,
	twisted/test/test_iutils.py, twisted/test/test_persisted.py,
	twisted/test/test_process.py, twisted/web/domhelpers.py,